# wwe-modify

./: BUILD.md  CMakeLists.txt  CMakePresets.json  Cargo.toml  README.CN.md  README.md  TODO.md  deps.json  environment.yml  main.py  make_appimages.sh  pyproject.toml
.cargo/: config.toml
.github/workflows/: appimage.yml  check.yml
bridge/: CMakeLists.txt
bridge/include/waywallen-bridge/: bridge.h  drm_fourcc.h  ipc_v1.h  pool.h  probe_egl.h  probe_vk.h  protocol_bits.h  resolution.h
bridge/src/: bridge.c  drm_fourcc.c  ipc_v1.c  log_internal.h  pool.c  pool_egl_gbm.c  pool_internal.h  pool_vulkan.c  probe_egl.c  probe_vk.c  sync_release.c  sync_release.h
displays/layer-shell/: Cargo.toml
displays/layer-shell/src/: hyprland_watcher.rs  main.rs
libs/ffmpeg/src/: presenter.hpp
plugins/image/: CMakeLists.txt
plugins/image/renderers/: waywallen-image.toml
plugins/image/sources/: image.lua
plugins/image/src/: main.cpp  vk_producer.cpp  vk_producer.hpp
plugins/mpv/: CMakeLists.txt
plugins/mpv/src/: main.cpp
plugins/org.waywallen.image/: plugin.toml
plugins/org.waywallen.image/image/: source.lua
plugins/org.waywallen.image/src/: av_image.cpp  av_image.hpp  main.cpp
plugins/org.waywallen.video/: plugin.toml
plugins/org.waywallen.video/src/: main.cpp
plugins/org.waywallen.video/video/: source.lua
plugins/video/: CMakeLists.txt
plugins/video/sources/: video.lua
plugins/video/src/: main.cpp
proto/: control.proto  filter.proto
protocol/: waywallen_display_v1.xml  waywallen_ipc_v1.xml
scripts/: build_appimage.sh  build_ffmpeg.sh  changelog.py  copy_syslibs.sh  dev_daemon.sh  dev_watch.sh  format.sh
src/: control.rs  dbus_iface.rs  display_endpoint.rs  event_process.rs  gpu.rs  hotkeys.rs  lib.rs  main.rs  negotiate.rs  renderer_manager.rs  settings.rs  wallpaper_properties.rs  wallpaper_type.rs  ws_server.rs
src/display/: endpoint.rs  layout.rs  spawner.rs
src/ipc/: uds.rs
src/model/: filter.rs  mod.rs  repo.rs  sync.rs
src/model/entities/: item.rs
src/model/migration/: m20260503_000001_init_v2.rs  m20260508_000006_swap_format_for_content_rating.rs  mod.rs
src/playlist/: engine.rs  restore.rs
src/plugin/: renderer_registry.rs  source_manager.rs  source_snapshot.rs
src/probe/: media.rs  task.rs
src/routing/: auto_replay.rs  autopause.rs  mod.rs  router.rs
src/self_test/: display_consumer.rs  mod.rs  orchestrator.rs  peer.rs  proto.rs  report.rs  spawn.rs
src/self_test/tests/: fanout.rs  render_loop.rs
src/self_test/vk/: sync.rs
src/tray/: dbusmenu.rs
tests/: ipc_renderer.rs  ipc_renderer_handshake_cpp.rs  ipc_renderer_handshake_rust.rs  release_syncobj_e2e.rs
tools/wayproto-gen/src/: codegen_c.rs
ui/: .CMakeLists.txt.swp  CMakeLists.txt  deps.json
ui/assets/: waywallen-ui.releases.xml
ui/include/waywallen/register/: qml_register.hpp
ui/qml/: Global.qml  PageRegistry.qml  Window.qml
ui/qml/component/: BindingChip.qml  EmbeddedWorkshop.qml  GpuTag.qml  HotkeyActionCatalog.qml  HotkeyActionRow.qml  HotkeyRuntime.qml  SearchChip.qml  ThumbnailImage.qml  ValueSlider.qml
ui/qml/component/filter/: EmptyFilter.qml  IntFilter.qml  StringFilter.qml  TagFilter.qml  TagPickerDialog.qml  WallpaperFilter.qml  WpTypeFilter.qml
ui/qml/component/settings/: PluginSettingsPopup.qml  SettingField.qml
ui/qml/dialog/: WallpaperFilterDialog.qml
ui/qml/page/: AboutPage.qml  AddLibraryPage.qml  DisplaysPage.qml  HotkeysSettingsPage.qml  PlaylistMembersView.qml  PlaylistPage.qml  PlaylistWallpaperPicker.qml  PluginManagePage.qml  SettingsPage.qml  StatusPage.qml  WallpaperCard.qml  WallpaperDetailPanel.qml  WallpaperPage.qml  WorkshopPage.qml
ui/qml/page/wallpaper/: TweakSheet.qml
ui/src/: action.cppm  app.cpp  app.cppm  backend.cppm  daemon_dbus.cpp  daemon_dbus.cppm  display.cpp  display.cppm  library.cpp  library.cppm  main.cpp  notify.cpp  notify.cppm  proto.cppm  renderer.cpp  renderer.cppm  util.cpp  util.cppm
ui/src/model/: filter_rule_model.cpp  filter_rule_model.cppm  list_models.cppm  remote_model.cpp  remote_model.cppm  store_item.cppm  user_property_model.cpp  user_property_model.cppm
ui/src/msg/: store.cpp
ui/src/objmodel/: display.cpp  display.cppm
ui/src/query/: display_query.cpp  display_query.cppm  gpu_query.cpp  health_query.cpp  library_query.cpp  library_query.cppm  mod.cppm  playlist_query.cpp  playlist_query.cppm  plugin_query.cpp  remote_query.cpp  remote_query.cppm  renderer_query.cpp  renderer_query.cppm  settings_query.cpp  settings_query.cppm  source_query.cpp  source_query.cppm  tag_query.cpp  tag_query.cppm  wallpaper_query.cpp  wallpaper_query.cppm
ui/src/thumb/: service.cpp  service.cppm
