[workspace]
members = [".", "tools/wayproto-gen"]
default-members = ["."]

[package]
name = "waywallen"
version = "0.2.1"
edition = "2021"
build = "build.rs"

[build-dependencies]
wayproto-gen = { path = "tools/wayproto-gen" }
prost-build = "0.13"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", default-features = false }
tokio-tungstenite = "0.24"
futures-util = "0.3"
prost = "0.13"
bytes = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2"
log = "0.4"
env_logger = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2", "charset", "stream"] }
uuid = { version = "1.0", features = ["v4"] }
nix = { version = "0.29", features = ["fs", "ioctl", "socket", "uio"] }
libc = "0.2"
# waywallen-renderer subprocess: ash for raw Vulkan control over
# DMA-BUF export + semaphore sync_fd export.
ash = "0.38"
toml = "0.8"
glob = "0.3"
zip = { version = "2", default-features = false, features = ["deflate", "zstd"] }
mlua = { version = "0.10", features = ["lua54", "vendored", "send", "async", "serialize"] }
mlua-extra = { git = "https://github.com/hypengw/mlua-extra", rev = "16fc20f1445e6b723da78fb08b236dfeaad10db0" }
libloading = "0.8"
zbus = { version = "4", default-features = false, features = ["tokio"] }
sea-orm = { version = "1.1", default-features = false, features = [
    "macros",
    "runtime-tokio-rustls",
    "sqlx-sqlite",
] }
sea-orm-migration = { version = "1.1", default-features = false, features = [
    "runtime-tokio-rustls",
    "sqlx-sqlite",
] }
notify = "8"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1.0", features = ["full", "test-util"] }

# Skip `cargo test` harnesses for binaries that hold no bin-specific tests.
[[bin]]
name = "waywallen"
path = "src/main.rs"
test = false

[[bin]]
name = "waywallen_display_demo"
path = "src/bin/waywallen_display_demo.rs"
test = false

[[bin]]
name = "waywallen_renderer"
path = "src/bin/waywallen_renderer.rs"
test = false
