[workspace]
members = [".", "tools/wayproto-gen"]
default-members = ["."]

[package]
name = "waywallen"
version = "0.2.1"
edition = "2021"
build = "build.rs"

[build-dependencies]
wayproto-gen = { path = "tools/wayproto-gen" }
prost-build = "0.13"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", default-features = false }
tokio-tungstenite = "0.24"
futures-util = "0.3"
prost = "0.13"
bytes = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2"
log = "0.4"
env_logger = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2", "charset", "stream"] }
uuid = { version = "1.0", features = ["v4"] }
nix = { version = "0.29", features = ["fs", "ioctl", "socket", "uio"] }
libc = "0.2"
# waywallen-renderer subprocess: ash for raw Vulkan control over
# DMA-BUF export + semaphore sync_fd export.
ash = "0.38"
toml = "0.8"
glob = "0.3"
zip = { version = "2", default-features = false, features = ["deflate", "zstd"] }
mlua = { version = "0.10", features = ["lua54", "vendored", "send", "async", "serialize"] }
mlua-extra = { git = "https://github.com/hypengw/mlua-extra", rev = "16fc20f1445e6b723da78fb08b236dfeaad10db0" }
libloading = "0.8"
zbus = { version = "4", default-features = false, features = ["tokio"] }
sea-orm = { version = "1.1", default-features = false, features = [
    "macros",
    "runtime-tokio-rustls",
    "sqlx-sqlite",
] }
sea-orm-migration = { version = "1.1", default-features = false, features = [
    "runtime-tokio-rustls",
    "sqlx-sqlite",
] }
notify = "8"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1.0", features = ["full", "test-util"] }

# ---------------------------------------------------------------------------
# Build profiles
# ---------------------------------------------------------------------------

# Release (default for AppImage): full optimisation + LTO.
# LTO is controlled externally via CMake's INTERPROCEDURAL_OPTIMIZATION;
# Cargo's own lto flag here stays thin so the Corrosion-driven build and
# a raw `cargo build --release` both behave the same.
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

# dev-fast: local iteration inside distrobox.
# No LTO, parallel codegen, incremental — compiles 2-4x faster than release.
# Binary is slightly larger and ~5-15% slower at runtime; fine for testing.
# Usage: cargo build --profile dev-fast
[profile.dev-fast]
inherits = "release"
opt-level = 1
lto = false
codegen-units = 16
incremental = true
debug = 1

# Skip `cargo test` harnesses for binaries that hold no bin-specific tests.
[[bin]]
name = "waywallen"
path = "src/main.rs"
test = false

[[bin]]
name = "waywallen_display_demo"
path = "src/bin/waywallen_display_demo.rs"
test = false

[[bin]]
name = "waywallen_renderer"
path = "src/bin/waywallen_renderer.rs"
test = false
